update all pages

--- a/services.html
+++ b/services.html
@@ -58,52 +58,10 @@
       </div>
     </nav>
 
-    <!-- Hero Section -->
-    <section class="hero-section" id="home">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-lg-6" data-aos="fade-right">
-            <div class="hero-content">
-              <h1 class="hero-title">Hi, I'm John Doe</h1>
-              <h2 class="hero-subtitle">
-                I'm a <span class="typing-text">Full Stack Developer</span>
-              </h2>
-              <p class="lead mb-4">
-                Passionate software developer with 5+ years of experience
-                creating innovative web applications and scalable solutions.
-              </p>
-              <div class="d-flex flex-wrap gap-3 mb-4">
-                <a href="#projects" class="btn btn-light btn-lg">
-                  <i class="fas fa-eye me-2"></i>View My Work
-                </a>
-                <a href="#contact" class="btn btn-outline-light btn-lg">
-                  <i class="fas fa-envelope me-2"></i>Hire Me
-                </a>
-              </div>
-              <div class="social-links">
-                <a href="#" class="social-icon">
-                  <i class="fab fa-github"></i>
-                </a>
-                <a href="#" class="social-icon">
-                  <i class="fab fa-linkedin"></i>
-                </a>
-                <a href="#" class="social-icon">
-                  <i class="fab fa-twitter"></i>
-                </a>
-                <a href="#" class="social-icon">
-                  <i class="fab fa-stackoverflow"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6 text-center" data-aos="fade-left">
-            <img
-              src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=400&h=400&fit=crop&crop=face"
-              alt="John Doe"
-              class="profile-img"
-            />
-          </div>
-        </div>
+    <section class="page-hero">
+      <div class="overlay"></div>
+      <div class="content">
+        <h1>Services</h1>
       </div>
     </section>
 
@@ -129,7 +87,7 @@
             <div class="service-img-box mb-3">
               <img src="https://cdn.pixabay.com/photo/2017/02/12/16/38/php-2060502_1280.jpg" class="img-fluid rounded service-img" alt="Service">
             </div>
-            <h5 class="card-title heading-design">Web Development</h5>
+            <h5 class="card-title">Web Development</h5>
             <p class="card-text">
               I create custom web applications using modern frameworks like React and Vue.  
               Each website is optimized for speed and SEO.  
@@ -151,7 +109,7 @@
             <div class="service-img-box mb-3">
               <img src="https://cdn.pixabay.com/photo/2017/02/12/16/38/php-2060502_1280.jpg" class="img-fluid rounded service-img" alt="Service">
             </div>
-            <h5 class="card-title heading-design">Mobile App Development</h5>
+            <h5 class="card-title">Mobile App Development</h5>
             <p class="card-text">
               I develop cross-platform mobile apps using Flutter and React Native.  
               The apps deliver smooth performance and native-like experiences.  
@@ -173,7 +131,7 @@
             <div class="service-img-box mb-3">
               <img src="https://cdn.pixabay.com/photo/2017/02/12/16/38/php-2060502_1280.jpg" class="img-fluid rounded service-img" alt="Service">
             </div>
-            <h5 class="card-title heading-design">Backend Development</h5>
+            <h5 class="card-title">Backend Development</h5>
             <p class="card-text">
               I build robust backend systems using Node.js and Python.  
               APIs are scalable and secure, supporting modern frontends.  
@@ -195,7 +153,7 @@
             <div class="service-img-box mb-3">
               <img src="https://cdn.pixabay.com/photo/2017/02/12/16/38/php-2060502_1280.jpg" class="img-fluid rounded service-img" alt="Service">
             </div>
-            <h5 class="card-title heading-design">Cloud Solutions</h5>
+            <h5 class="card-title">Cloud Solutions</h5>
             <p class="card-text">
               I offer cloud setup and management for AWS and Azure.  
               Your applications will be deployed with Docker or Kubernetes.  
@@ -217,7 +175,7 @@
             <div class="service-img-box mb-3">
               <img src="https://cdn.pixabay.com/photo/2017/02/12/16/38/php-2060502_1280.jpg" class="img-fluid rounded service-img" alt="Service">
             </div>
-            <h5 class="card-title heading-design">Data Analytics</h5>
+            <h5 class="card-title">Data Analytics</h5>
             <p class="card-text">
               I provide data analysis services using Python and visualization tools.  
               Custom dashboards help you track key business metrics.  
@@ -239,7 +197,7 @@
             <div class="service-img-box mb-3">
               <img src="https://cdn.pixabay.com/photo/2017/02/12/16/38/php-2060502_1280.jpg" class="img-fluid rounded service-img" alt="Service">
             </div>
-            <h5 class="card-title heading-design">Technical Consulting</h5>
+            <h5 class="card-title">Technical Consulting</h5>
             <p class="card-text">
               I help businesses make informed technology decisions.  
               From MVP to scale-up, I guide product development.  
@@ -264,7 +222,7 @@
             <div class="service-img-box mb-3">
               <img src="https://cdn.pixabay.com/photo/2017/02/12/16/38/php-2060502_1280.jpg" class="img-fluid rounded service-img" alt="Service">
             </div>
-            <h5 class="card-title heading-design">UI/UX Design</h5>
+            <h5 class="card-title">UI/UX Design</h5>
             <p class="card-text">
               I craft user-centered designs that enhance experiences.  
               Wireframes and prototypes help visualize ideas.  
