--- a/blog.html
+++ b/blog.html
@@ -51,13 +51,13 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="projects.html">Projects</a>
+              <a class="nav-link " href="projects.html">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="services.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="blog.html">Blog</a>
+              <a class="nav-link active" href="blog.html">Blog</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
