--- a/index.html
+++ b/index.html
@@ -23,16 +23,6 @@
     />
 
     <link rel="stylesheet" href="style.css" />
-
-    <style>
-      .testimonial-card {
-        transition: all 0.3s ease;
-      }
-      .testimonial-card:hover {
-        transform: translateY(-5px);
-        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-      }
-    </style>
   </head>
 
   <body>
@@ -647,159 +637,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 
-    <script>
-      // Initialize AOS (Animate On Scroll)
-      AOS.init({
-        duration: 1000,
-        once: true,
-        offset: 100,
-      });
-
-      // Enhanced navbar scroll effect
-      window.addEventListener("scroll", function () {
-        const navbar = document.querySelector(".navbar");
-        const scrolled = window.pageYOffset;
-
-        if (scrolled > 100) {
-          navbar.style.background = "rgba(255, 255, 255, 0.98)";
-          navbar.style.backdropFilter = "blur(15px)";
-          navbar.style.boxShadow = "0 4px 30px rgba(0,0,0,0.15)";
-        } else {
-          navbar.style.background = "rgba(255, 255, 255, 0.95)";
-          navbar.style.backdropFilter = "blur(10px)";
-          navbar.style.boxShadow = "0 2px 20px rgba(0,0,0,0.1)";
-        }
-      });
-
-      // Active navigation link highlighting
-      window.addEventListener("scroll", function () {
-        const sections = document.querySelectorAll("section[id]");
-        const navLinks = document.querySelectorAll(".nav-link");
-        const navbar = document.querySelector(".navbar");
-        const navbarHeight = navbar ? navbar.offsetHeight : 80;
-
-        let current = "";
-        sections.forEach((section) => {
-          const sectionTop = section.offsetTop - navbarHeight - 50;
-          const sectionHeight = section.offsetHeight;
-
-          if (
-            window.pageYOffset >= sectionTop &&
-            window.pageYOffset < sectionTop + sectionHeight
-          ) {
-            current = section.getAttribute("id");
-          }
-        });
-
-        navLinks.forEach((link) => {
-          link.classList.remove("active");
-          if (link.getAttribute("href") === `#${current}`) {
-            link.classList.add("active");
-          }
-        });
-      });
-
-      // Back to top button functionality
-      const backToTopBtn = document.getElementById("backToTop");
-
-      if (backToTopBtn) {
-        window.addEventListener("scroll", function () {
-          if (window.scrollY > 300) {
-            backToTopBtn.style.display = "flex";
-          } else {
-            backToTopBtn.style.display = "none";
-          }
-        });
-
-        backToTopBtn.addEventListener("click", function () {
-          window.scrollTo({
-            top: 0,
-            behavior: "smooth",
-          });
-        });
-      }
-
-      // Typing animation for hero section
-      const typingText = document.querySelector(".typing-text");
-      if (typingText) {
-        const words = [
-          "Full Stack Developer",
-          "React Specialist",
-          "Node.js Expert",
-          "Cloud Architect",
-        ];
-        let wordIndex = 0;
-        let charIndex = 0;
-        let isDeleting = false;
-
-        function typeWriter() {
-          const currentWord = words[wordIndex];
-
-          if (isDeleting) {
-            typingText.textContent = currentWord.substring(0, charIndex - 1);
-            charIndex--;
-          } else {
-            typingText.textContent = currentWord.substring(0, charIndex + 1);
-            charIndex++;
-          }
-
-          if (!isDeleting && charIndex === currentWord.length) {
-            setTimeout(() => (isDeleting = true), 2000);
-          } else if (isDeleting && charIndex === 0) {
-            isDeleting = false;
-            wordIndex = (wordIndex + 1) % words.length;
-          }
-
-          const typeSpeed = isDeleting ? 50 : 100;
-          setTimeout(typeWriter, typeSpeed);
-        }
-
-        // Start typing animation
-        setTimeout(typeWriter, 1000);
-      }
-
-      // Navbar mobile menu close on link click
-      document.querySelectorAll(".navbar-nav .nav-link").forEach((link) => {
-        link.addEventListener("click", function () {
-          const navbarToggler = document.querySelector(".navbar-toggler");
-          const navbarCollapse = document.querySelector(".navbar-collapse");
-
-          if (navbarCollapse.classList.contains("show")) {
-            navbarToggler.click();
-          }
-        });
-      });
-
-      // Project card hover effects
-      document.querySelectorAll(".project-card").forEach((card) => {
-        card.addEventListener("mouseenter", function () {
-          this.style.transform = "scale(1.02)";
-        });
-
-        card.addEventListener("mouseleave", function () {
-          this.style.transform = "scale(1)";
-        });
-      });
-
-      // Prevent navbar from covering content on page load with hash
-      window.addEventListener("load", function () {
-        if (window.location.hash) {
-          const target = document.querySelector(window.location.hash);
-          if (target) {
-            const navbar = document.querySelector(".navbar");
-            const navbarHeight = navbar ? navbar.offsetHeight : 80;
-            const targetPosition = target.offsetTop - navbarHeight - 20;
-
-            setTimeout(() => {
-              window.scrollTo({
-                top: targetPosition,
-                behavior: "smooth",
-              });
-            }, 100);
-          }
-        }
-      });
-    </script>
+  <script src="script.js"></script>
     <script>
       const swiper = new Swiper(".testimonial-slider", {
         loop: true,
