--- a/contact.html
+++ b/contact.html
@@ -150,7 +150,7 @@
               </div>
             </div>
 
-            <div class="card">
+            <div class="card mb-4">
               <div class="card-body text-center">
                 <h5 class="card-title mb-4">Connect With Me</h5>
                 <div class="social-grid">
@@ -366,12 +366,12 @@
     </section>
     <section id="location" class="section-padding">
       <div class="container">
-        <div class="section-title text-center mb-5">
+        <div class="section-title text-center mb-5" data-aos="fade-up">
           <h2>Our Location</h2>
           <p class="lead">Visit us or get in touch remotely</p>
         </div>
 
-        <div class="row">
+        <div class="row" data-aos="fade-up" data-aos-delay="100">
           <div class="col-md-12">
             <div class="map-responsive">
               <iframe
@@ -392,14 +392,14 @@
     <!-- FAQ Page Section -->
     <section id="faq" class="section-padding bg-light">
       <div class="container">
-        <div class="section-title">
+        <div class="section-title" data-aos="fade-up">
           <h2>Frequently Asked Questions</h2>
           <p class="lead">
             Find answers to common questions about our templates and services
           </p>
         </div>
 
-        <div class="row">
+        <div class="row" data-aos="fade-up" data-aos-delay="100">
           <div class="col-md-8 mx-auto">
             <div class="accordion" id="faqAccordion">
               <!-- General Questions -->
@@ -482,86 +482,95 @@
         </div>
       </div>
     </section>
-    <!-- Footer -->
-    <footer class="footer">
+    <footer class="footer text-light bg-dark pt-5 pb-4">
       <div class="container">
-        <div class="row">
-          <div class="col-md-4 mb-4">
-            <h5><i class="fas fa-code me-2"></i>John Doe</h5>
+        <div class="row gy-4">
+          <!-- About / Bio -->
+          <div class="col-lg-4 col-md-6">
+            <h5 class="mb-3"><i class="fas fa-code me-2"></i>John Doe</h5>
             <p>
-              Full Stack Developer passionate about creating innovative web
-              solutions and helping businesses grow through technology.
+              I am a Full-Stack developer based in Pune, India. I am an
+              Information Technology undergraduate from SPPU. I am very
+              passionate about improving my coding skills & developing
+              applications & websites. I build WebApps and Websites using MERN
+              Stack. Working for myself to improve my skills. Love to build
+              Full-Stack clones.
             </p>
-            <div class="social-links">
-              <a href="#" class="social-icon me-2">
-                <i class="fab fa-github"></i>
-              </a>
-              <a href="#" class="social-icon me-2">
-                <i class="fab fa-linkedin"></i>
-              </a>
-              <a href="#" class="social-icon me-2">
-                <i class="fab fa-twitter"></i>
-              </a>
-              <a href="#" class="social-icon">
-                <i class="fab fa-stackoverflow"></i>
-              </a>
+            <div class="social-grid">
+              <a href="#" class="social-circle linkedin"
+                ><i class="fab fa-linkedin-in"></i
+              ></a>
+              <a href="#" class="social-circle github"
+                ><i class="fab fa-github"></i
+              ></a>
+
+              <a href="#" class="social-circle facebook"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
+              <a href="#" class="social-circle instagram"
+                ><i class="fab fa-instagram"></i
+              ></a>
+              <a href="#" class="social-circle youtube"
+                ><i class="fab fa-youtube"></i
+              ></a>
+
+              <a href="#" class="social-circle telegram"
+                ><i class="fab fa-telegram-plane"></i
+              ></a>
             </div>
           </div>
 
-          <div class="col-md-2 mb-4">
-            <h6>Quick Links</h6>
-            <ul class="list-unstyled">
-              <li><a href="#about" class="text-light">About</a></li>
-              <li><a href="#projects" class="text-light">Projects</a></li>
-              <li><a href="#services" class="text-light">Services</a></li>
-              <li><a href="#blog" class="text-light">Blog</a></li>
-              <li><a href="#contact" class="text-light">Contact</a></li>
+          <!-- Quick Links -->
+          <div class="col-lg-4 col-md-6">
+            <h6 class="text-uppercase mb-3">Quick Links</h6>
+            <ul class="list-unstyled footer-links">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="projects.html">Projects</a></li>
+              <li><a href="services.html">Services</a></li>
+              <li><a href="blog.html">Blog</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
 
-          <div class="col-md-3 mb-4">
-            <h6>Services</h6>
-            <ul class="list-unstyled">
-              <li>
-                <a href="#services" class="text-light">Web Development</a>
-              </li>
-              <li><a href="#services" class="text-light">Mobile Apps</a></li>
-              <li><a href="#services" class="text-light">Backend APIs</a></li>
-              <li>
-                <a href="#services" class="text-light">Cloud Solutions</a>
-              </li>
-              <li><a href="#services" class="text-light">Consulting</a></li>
-            </ul>
-          </div>
-
-          <div class="col-md-3 mb-4">
-            <h6>Get In Touch</h6>
-            <ul class="list-unstyled">
-              <li><i class="fas fa-envelope me-2"></i>john.doe@email.com</li>
-              <li><i class="fas fa-phone me-2"></i>+1 (555) 123-4567</li>
-              <li>
-                <i class="fas fa-map-marker-alt me-2"></i>San Francisco, CA
-              </li>
-            </ul>
-            <div class="mt-3">
-              <a href="#contact" class="btn btn-outline-light btn-sm">
-                <i class="fas fa-paper-plane me-2"></i>Start Project
-              </a>
+          <!-- Subscribe Section -->
+          <div class="col-lg-4 col-md-6">
+            <h6 class="text-uppercase mb-3">Subscribe to My Newsletter</h6>
+            <p class="small">
+              Stay informed with exclusive project
+              updates and insights. Get the latest tech news, tips, and
+              resources—straight to your inbox.
+            </p>
+            <div class="row">
+              <form class="flex-column flex-sm-row">
+                <input
+                  type="email"
+                  class="form-control me-sm-2 mb-2 mb-sm-0 mb-3"
+                  placeholder="Your Email"
+                />
+                <br />
+                <button type="submit" class="btn btn-primary">
+                  <i class="fas fa-paper-plane me-1"></i>Subscribe
+                </button>
+              </form>
             </div>
           </div>
         </div>
 
-        <hr class="border-secondary" />
+        <hr class="border-secondary mt-4 mb-3" />
 
-        <div class="row align-items-center">
-          <div class="col-md-6">
-            <p class="mb-0">&copy; 2024 John Doe. All rights reserved.</p>
+        <div class="row align-items-center text-center text-md-start">
+          <div class="col-md-6 mb-2 mb-md-0">
+            <p class="mb-0">
+              &copy; 2024 <strong>John Doe.</strong> All rights reserved.
+            </p>
           </div>
           <div class="col-md-6 text-md-end">
-            <p class="mb-0">
-              Made with <i class="fas fa-heart text-danger"></i> using Bootstrap
-              5
-            </p>
+            <a href="#legal" class="me-3">Terms</a>
+            <a href="#legal" class="me-3">Privacy</a> |
+            <span class="small"
+              >Made with <i class="fas fa-heart text-danger"></i> in India</span
+            >
           </div>
         </div>
       </div>
@@ -575,225 +584,6 @@
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-
-    <script>
-      // Initialize AOS (Animate On Scroll)
-      AOS.init({
-        duration: 1000,
-        once: true,
-        offset: 100,
-      });
-
-      // Fixed smooth scrolling that accounts for navbar height
-      document.querySelectorAll('a[href^="#"]').forEach((anchor) => {
-        anchor.addEventListener("click", function (e) {
-          e.preventDefault();
-          const target = document.querySelector(this.getAttribute("href"));
-          if (target) {
-            const navbar = document.querySelector(".navbar");
-            const navbarHeight = navbar ? navbar.offsetHeight : 80;
-            const targetPosition = target.offsetTop - navbarHeight - 20;
-
-            window.scrollTo({
-              top: targetPosition,
-              behavior: "smooth",
-            });
-          }
-        });
-      });
-
-      // Enhanced navbar scroll effect
-      window.addEventListener("scroll", function () {
-        const navbar = document.querySelector(".navbar");
-        const scrolled = window.pageYOffset;
-
-        if (scrolled > 100) {
-          navbar.style.background = "rgba(255, 255, 255, 0.98)";
-          navbar.style.backdropFilter = "blur(15px)";
-          navbar.style.boxShadow = "0 4px 30px rgba(0,0,0,0.15)";
-        } else {
-          navbar.style.background = "rgba(255, 255, 255, 0.95)";
-          navbar.style.backdropFilter = "blur(10px)";
-          navbar.style.boxShadow = "0 2px 20px rgba(0,0,0,0.1)";
-        }
-      });
-
-      // Active navigation link highlighting
-      window.addEventListener("scroll", function () {
-        const sections = document.querySelectorAll("section[id]");
-        const navLinks = document.querySelectorAll(".nav-link");
-        const navbar = document.querySelector(".navbar");
-        const navbarHeight = navbar ? navbar.offsetHeight : 80;
-
-        let current = "";
-        sections.forEach((section) => {
-          const sectionTop = section.offsetTop - navbarHeight - 50;
-          const sectionHeight = section.offsetHeight;
-
-          if (
-            window.pageYOffset >= sectionTop &&
-            window.pageYOffset < sectionTop + sectionHeight
-          ) {
-            current = section.getAttribute("id");
-          }
-        });
-
-        navLinks.forEach((link) => {
-          link.classList.remove("active");
-          if (link.getAttribute("href") === `#${current}`) {
-            link.classList.add("active");
-          }
-        });
-      });
-
-      // Back to top button functionality
-      const backToTopBtn = document.getElementById("backToTop");
-
-      if (backToTopBtn) {
-        window.addEventListener("scroll", function () {
-          if (window.scrollY > 300) {
-            backToTopBtn.style.display = "flex";
-          } else {
-            backToTopBtn.style.display = "none";
-          }
-        });
-
-        backToTopBtn.addEventListener("click", function () {
-          window.scrollTo({
-            top: 0,
-            behavior: "smooth",
-          });
-        });
-      }
-
-      // Typing animation for hero section
-      const typingText = document.querySelector(".typing-text");
-      if (typingText) {
-        const words = [
-          "Full Stack Developer",
-          "React Specialist",
-          "Node.js Expert",
-          "Cloud Architect",
-        ];
-        let wordIndex = 0;
-        let charIndex = 0;
-        let isDeleting = false;
-
-        function typeWriter() {
-          const currentWord = words[wordIndex];
-
-          if (isDeleting) {
-            typingText.textContent = currentWord.substring(0, charIndex - 1);
-            charIndex--;
-          } else {
-            typingText.textContent = currentWord.substring(0, charIndex + 1);
-            charIndex++;
-          }
-
-          if (!isDeleting && charIndex === currentWord.length) {
-            setTimeout(() => (isDeleting = true), 2000);
-          } else if (isDeleting && charIndex === 0) {
-            isDeleting = false;
-            wordIndex = (wordIndex + 1) % words.length;
-          }
-
-          const typeSpeed = isDeleting ? 50 : 100;
-          setTimeout(typeWriter, typeSpeed);
-        }
-
-        // Start typing animation
-        setTimeout(typeWriter, 1000);
-      }
-
-      // Contact form submission
-      document
-        .getElementById("contactForm")
-        .addEventListener("submit", function (e) {
-          e.preventDefault();
-
-          const submitBtn = this.querySelector('button[type="submit"]');
-          const originalText = submitBtn.innerHTML;
-
-          // Show loading state
-          submitBtn.innerHTML =
-            '<i class="fas fa-spinner fa-spin me-2"></i>Sending...';
-          submitBtn.disabled = true;
-
-          // Simulate form submission
-          setTimeout(() => {
-            submitBtn.innerHTML =
-              '<i class="fas fa-check me-2"></i>Message Sent!';
-            submitBtn.className = "btn btn-success";
-
-            // Reset form after 3 seconds
-            setTimeout(() => {
-              submitBtn.innerHTML = originalText;
-              submitBtn.className = "btn btn-gradient";
-              submitBtn.disabled = false;
-              this.reset();
-
-              // Show success message
-              const alertDiv = document.createElement("div");
-              alertDiv.className =
-                "alert alert-success alert-dismissible fade show mt-3";
-              alertDiv.innerHTML = `
-                        <i class="fas fa-check-circle me-2"></i>
-                        Thank you! Your message has been sent successfully. I'll get back to you soon.
-                        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-                    `;
-              this.appendChild(alertDiv);
-
-              // Remove alert after 5 seconds
-              setTimeout(() => {
-                if (alertDiv.parentNode) {
-                  alertDiv.remove();
-                }
-              }, 5000);
-            }, 2000);
-          }, 1500);
-        });
-
-      // Navbar mobile menu close on link click
-      document.querySelectorAll(".navbar-nav .nav-link").forEach((link) => {
-        link.addEventListener("click", function () {
-          const navbarToggler = document.querySelector(".navbar-toggler");
-          const navbarCollapse = document.querySelector(".navbar-collapse");
-
-          if (navbarCollapse.classList.contains("show")) {
-            navbarToggler.click();
-          }
-        });
-      });
-
-      // Project card hover effects
-      document.querySelectorAll(".project-card").forEach((card) => {
-        card.addEventListener("mouseenter", function () {
-          this.style.transform = "scale(1.02)";
-        });
-
-        card.addEventListener("mouseleave", function () {
-          this.style.transform = "scale(1)";
-        });
-      });
-
-      // Prevent navbar from covering content on page load with hash
-      window.addEventListener("load", function () {
-        if (window.location.hash) {
-          const target = document.querySelector(window.location.hash);
-          if (target) {
-            const navbar = document.querySelector(".navbar");
-            const navbarHeight = navbar ? navbar.offsetHeight : 80;
-            const targetPosition = target.offsetTop - navbarHeight - 20;
-
-            setTimeout(() => {
-              window.scrollTo({
-                top: targetPosition,
-                behavior: "smooth",
-              });
-            }, 100);
-          }
-        }
-      });
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
