--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 Passionate software developer with 5+ years of experience
                 creating innovative web applications and scalable solutions.
               </p>
-              <div class="d-flex flex-wrap gap-3 mb-4">
+              <div class="d-flex flex-wrap gap-1 mb-4">
                 <a href="#" class="btn btn-gradient mt-3 mb-3">
                   <i class="fas fa-eye me-2"></i>View My Work
                 </a>
@@ -88,7 +88,7 @@
                   Contact Us
                 </a>
               </div>
-              <div class="social-grid">
+              <div class="social-grid mb-4">
                 <a href="#" class="social-circle linkedin"
                   ><i class="fab fa-linkedin-in"></i
                 ></a>
@@ -183,13 +183,15 @@
               </div>
             </div>
 
-            <a href="#" class="btn btn-gradient mt-3 mb-3">
-              <i class="fas fa-download me-2"></i>Download CV
-            </a>
-            <a href="contact.html" class="btn btn-gradient mt-3 mb-3">
-              <i class="fa fa-address-book me-2" aria-hidden="true"></i> Contact
-              Us
-            </a>
+            <div class="d-flex flex-wrap gap-1 mb-4">
+              <a href="#" class="btn btn-gradient mt-3 mb-3">
+                <i class="fas fa-download me-2"></i>Download CV
+              </a>
+              <a href="contact.html" class="btn btn-gradient mt-3 mb-3">
+                <i class="fa fa-address-book me-2" aria-hidden="true"></i>
+                Contact Us
+              </a>
+            </div>
           </div>
 
           <div class="col-lg-6" data-aos="fade-left">
@@ -588,9 +590,8 @@
           <div class="col-lg-4 col-md-6">
             <h6 class="text-uppercase mb-3">Subscribe to My Newsletter</h6>
             <p class="small">
-              Stay informed with exclusive project
-              updates and insights. Get the latest tech news, tips, and
-              resources—straight to your inbox.
+              Stay informed with exclusive project updates and insights. Get the
+              latest tech news, tips, and resources—straight to your inbox.
             </p>
             <div class="row">
               <form class="flex-column flex-sm-row">
@@ -637,7 +638,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 
-  <script src="script.js"></script>
+    <script src="script.js"></script>
     <script>
       const swiper = new Swiper(".testimonial-slider", {
         loop: true,
