--- a/about.html
+++ b/about.html
@@ -115,13 +115,14 @@
               </div>
             </div>
 
-            <a href="#" class="btn btn-gradient mt-3 mb-3">
-              <i class="fas fa-download me-2"></i>Download CV
-            </a>
-            <a href="contact.html" class="btn btn-gradient mt-3 mb-3">
-              <i class="fa fa-address-book me-2" aria-hidden="true"></i> Contact
-              Us
-            </a>
+            <div class="d-flex flex-nowrap justify-content-center gap-2 mb-4 mt-2">
+  <a href="#" class="btn btn-gradient px-3">
+    <i class="fas fa-download me-2"></i>Download CV
+  </a>
+  <a href="contact.html" class="btn btn-gradient px-3">
+    <i class="fa fa-address-book me-2"></i>Contact Us
+  </a>
+</div>
           </div>
 
           <div class="col-lg-6" data-aos="fade-left">
