--- a/index.html
+++ b/index.html
@@ -79,13 +79,12 @@
                 Passionate software developer with 5+ years of experience
                 creating innovative web applications and scalable solutions.
               </p>
-              <div class="d-flex flex-wrap gap-1 mb-4">
-                <a href="#" class="btn btn-gradient mt-3 mb-3">
+              <div class="d-flex flex-nowrap justify-content-center gap-2 mb-4">
+                <a href="#" class="btn btn-gradient px-3">
                   <i class="fas fa-eye me-2"></i>View My Work
                 </a>
-                <a href="contact.html" class="btn btn-gradient mt-3 mb-3">
-                  <i class="fa fa-address-book me-2" aria-hidden="true"></i>
-                  Contact Us
+                <a href="contact.html" class="btn btn-gradient px-3">
+                  <i class="fa fa-address-book me-2"></i>Contact Us
                 </a>
               </div>
               <div class="social-grid mb-4">
