--- a/about.html
+++ b/about.html
@@ -115,7 +115,9 @@
               </div>
             </div>
 
-            <div class="d-flex flex-nowrap justify-content-center gap-2 mb-4 mt-2">
+            <div
+              class="d-flex flex-nowrap justify-content-center gap-2 mb-4 mt-2"
+            >
               <a href="#" class="btn btn-gradient px-3">
                 <i class="fas fa-download me-2"></i>Download CV
               </a>
@@ -341,7 +343,7 @@
             <div class="card mb-4 shadow-sm education-card">
               <div class="card-body d-flex align-items-center">
                 <img
-                  src="https://img.icons8.com/color/96/laptop-coding.png"
+                  src="https://img.icons8.com/color/96/open-book--v2.png"
                   alt="B.Tech Icon"
                   class="edu-icon me-3"
                 />
@@ -469,9 +471,10 @@
     </section>
 
     <!-- Certifications Section -->
+    <!-- Certifications Section -->
     <section id="certifications" class="section-padding bg-light">
       <div class="container">
-        <div class="section-title" data-aos="fade-up">
+        <div class="section-title text-center mb-5" data-aos="fade-up">
           <h2>Certifications & Achievements</h2>
           <p class="lead">
             Professional certifications and industry recognition
@@ -479,63 +482,147 @@
         </div>
 
         <div class="row">
+          <!-- CARD 1 -->
           <div
             class="col-lg-3 col-md-6 mb-4"
             data-aos="fade-up"
             data-aos-delay="100"
           >
-            <div class="certification-badge">
-              <div class="text-primary mb-3">
-                <i class="fab fa-aws fa-3x"></i>
+            <div class="card text-center shadow-sm h-100">
+              <div class="card-body p-4">
+                <div class="text-primary mb-3">
+                  <i class="fab fa-aws fa-3x"></i>
+                </div>
+                <h5 class="card-title">AWS Certified Solutions Architect</h5>
+                <p class="text-muted">Amazon Web Services</p>
+                <small class="text-muted">Valid: 2023 - 2026</small>
               </div>
-              <h5>AWS Certified Solutions Architect</h5>
-              <p class="text-muted">Amazon Web Services</p>
-              <small>Valid: 2023 - 2026</small>
             </div>
           </div>
 
+          <!-- CARD 2 -->
+          <div
+            class="col-lg-3 col-md-6 mb-4"
+            data-aos="fade-up"
+            data-aos-delay="150"
+          >
+            <div class="card text-center shadow-sm h-100">
+              <div class="card-body p-4">
+                <div class="text-info mb-3">
+                  <i class="fab fa-google fa-3x"></i>
+                </div>
+                <h5 class="card-title">Google Cloud Professional</h5>
+                <p class="text-muted">Google Cloud Platform</p>
+                <small class="text-muted">Valid: 2023 - 2025</small>
+              </div>
+            </div>
+          </div>
+
+          <!-- CARD 3 -->
           <div
             class="col-lg-3 col-md-6 mb-4"
             data-aos="fade-up"
             data-aos-delay="200"
           >
-            <div class="certification-badge">
-              <div class="text-info mb-3">
-                <i class="fab fa-google fa-3x"></i>
+            <div class="card text-center shadow-sm h-100">
+              <div class="card-body p-4">
+                <div class="text-success mb-3">
+                  <i class="fab fa-node-js fa-3x"></i>
+                </div>
+                <h5 class="card-title">Node.js Certified Developer</h5>
+                <p class="text-muted">Node.js Foundation</p>
+                <small class="text-muted">Valid: 2022 - 2025</small>
               </div>
-              <h5>Google Cloud Professional</h5>
-              <p class="text-muted">Google Cloud Platform</p>
-              <small>Valid: 2023 - 2025</small>
             </div>
           </div>
 
+          <!-- CARD 4 -->
+          <div
+            class="col-lg-3 col-md-6 mb-4"
+            data-aos="fade-up"
+            data-aos-delay="250"
+          >
+            <div class="card text-center shadow-sm h-100">
+              <div class="card-body p-4">
+                <div class="text-warning mb-3">
+                  <i class="fas fa-trophy fa-3x"></i>
+                </div>
+                <h5 class="card-title">Scrum Master Certified</h5>
+                <p class="text-muted">Scrum Alliance</p>
+                <small class="text-muted">Valid: 2023 - 2025</small>
+              </div>
+            </div>
+          </div>
+
+          <!-- CARD 5 -->
           <div
             class="col-lg-3 col-md-6 mb-4"
             data-aos="fade-up"
             data-aos-delay="300"
           >
-            <div class="certification-badge">
-              <div class="text-success mb-3">
-                <i class="fab fa-node-js fa-3x"></i>
+            <div class="card text-center shadow-sm h-100">
+              <div class="card-body p-4">
+                <div class="text-danger mb-3">
+                  <i class="fab fa-python fa-3x"></i>
+                </div>
+                <h5 class="card-title">Python Developer Certification</h5>
+                <p class="text-muted">OpenEDU</p>
+                <small class="text-muted">Valid: 2024 - 2027</small>
               </div>
-              <h5>Node.js Certified Developer</h5>
-              <p class="text-muted">Node.js Foundation</p>
-              <small>Valid: 2022 - 2025</small>
             </div>
           </div>
 
+          <!-- CARD 6 -->
+          <div
+            class="col-lg-3 col-md-6 mb-4"
+            data-aos="fade-up"
+            data-aos-delay="350"
+          >
+            <div class="card text-center shadow-sm h-100">
+              <div class="card-body p-4">
+                <div class="text-secondary mb-3">
+                  <i class="fas fa-database fa-3x"></i>
+                </div>
+                <h5 class="card-title">MongoDB Certified Developer</h5>
+                <p class="text-muted">MongoDB University</p>
+                <small class="text-muted">Valid: 2023 - 2026</small>
+              </div>
+            </div>
+          </div>
+
+          <!-- CARD 7 -->
           <div
             class="col-lg-3 col-md-6 mb-4"
             data-aos="fade-up"
             data-aos-delay="400"
           >
-            <div class="certification-badge">
-              <div class="text-warning mb-3">
-                <i class="fas fa-trophy fa-3x"></i>
+            <div class="card text-center shadow-sm h-100">
+              <div class="card-body p-4">
+                <div class="text-info mb-3">
+                  <i class="fas fa-globe fa-3x"></i>
+                </div>
+                <h5 class="card-title">Full Stack Developer</h5>
+                <p class="text-muted">Coursera (Meta)</p>
+                <small class="text-muted">Valid: 2022 - 2025</small>
               </div>
-              <h5>Scrum Master Certified</h5>
-              <p class="text-muted">Scrum Alliance</p>
-              <small>Valid: 2023 - 2025</small>
+            </div>
+          </div>
+
+          <!-- CARD 8 -->
+          <div
+            class="col-lg-3 col-md-6 mb-4"
+            data-aos="fade-up"
+            data-aos-delay="450"
+          >
+            <div class="card text-center shadow-sm h-100">
+              <div class="card-body p-4">
+                <div class="text-success mb-3">
+                  <i class="fas fa-lock fa-3x"></i>
+                </div>
+                <h5 class="card-title">Cybersecurity Fundamentals</h5>
+                <p class="text-muted">IBM SkillsBuild</p>
+                <small class="text-muted">Valid: 2023 - 2026</small>
+              </div>
             </div>
           </div>
         </div>
