--- a/index.html
+++ b/index.html
@@ -353,182 +353,230 @@
           data-aos-delay="100"
         >
           <div class="swiper-wrapper">
-            <!-- Testimonial 1 -->
+            <!-- CARD 1 -->
             <div class="swiper-slide">
-              <div class="testimonial-card p-4 shadow-sm bg-white rounded">
-                <p>
-                  John delivered an exceptional e-commerce platform that
-                  exceeded our expectations. His attention to detail and
-                  technical expertise made our project a huge success.
-                </p>
-                <div class="d-flex align-items-center mt-4">
-                  <div
-                    class="rounded-circle bg-primary d-flex align-items-center justify-content-center me-3"
-                    style="
-                      width: 50px;
-                      height: 50px;
-                      color: white;
-                      font-weight: bold;
-                    "
-                  >
-                    SM
+              <div class="card testimonial-hover shadow-sm text-dark">
+                <div class="card-body p-4 d-flex flex-column h-100">
+                  <div class="rating text-end mb-2 mt-2">
+                    <i class="fas fa-star text-warning"></i
+                    ><i class="fas fa-star text-warning"></i
+                    ><i class="fas fa-star text-warning"></i
+                    ><i class="fas fa-star text-warning"></i
+                    ><i class="fas fa-star-half-alt text-warning"></i>
                   </div>
-                  <div>
-                    <h6 class="mb-0">Sarah Mitchell</h6>
-                    <small class="text-muted">CEO, TechStart Inc.</small>
+                  <p class="testimonial-text mb-3">
+                    John delivered an exceptional e-commerce platform that
+                    exceeded our expectations. His attention to detail and
+                    technical expertise made our project a huge success. He also
+                    supported us post-launch with continuous improvements.
+                  </p>
+                  <div class="d-flex align-items-center mt-auto">
+                    <div class="avatar-circle bg-primary me-3">SM</div>
+                    <div>
+                      <h6 class="mb-0">Sarah Mitchell</h6>
+                      <small class="text-muted">CEO, TechStart Inc.</small>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
 
-            <!-- Testimonial 2 -->
+            <!-- CARD 2 -->
             <div class="swiper-slide">
-              <div class="testimonial-card p-4 shadow-sm bg-white rounded">
-                <p>
-                  Working with John was a pleasure. He's not only technically
-                  skilled but also great at communicating complex concepts in
-                  simple terms. Highly recommended!
-                </p>
-                <div class="d-flex align-items-center mt-4">
-                  <div
-                    class="rounded-circle bg-success d-flex align-items-center justify-content-center me-3"
-                    style="
-                      width: 50px;
-                      height: 50px;
-                      color: white;
-                      font-weight: bold;
-                    "
-                  >
-                    MJ
+              <div class="card testimonial-hover shadow-sm text-dark">
+                <div class="card-body p-4 d-flex flex-column h-100">
+                  <div class="rating text-end mb-2 mt-2">
+                    <i class="fas fa-star text-warning"></i
+                    ><i class="fas fa-star text-warning"></i
+                    ><i class="fas fa-star text-warning"></i
+                    ><i class="fas fa-star text-warning"></i
+                    ><i class="far fa-star text-warning"></i>
                   </div>
-                  <div>
-                    <h6 class="mb-0">Michael Johnson</h6>
-                    <small class="text-muted">CTO, Digital Solutions</small>
+                  <p class="testimonial-text mb-3">
+                    Working with John was a pleasure. He's not only technically
+                    skilled but also great at communicating complex concepts in
+                    simple terms. Highly recommended!
+                  </p>
+                  <div class="d-flex align-items-center mt-auto">
+                    <div class="avatar-circle bg-success me-3">MJ</div>
+                    <div>
+                      <h6 class="mb-0">Michael Johnson</h6>
+                      <small class="text-muted">CTO, Digital Solutions</small>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
 
-            <!-- Testimonial 3 -->
+            <!-- CARD 3 -->
             <div class="swiper-slide">
-              <div class="testimonial-card p-4 shadow-sm bg-white rounded">
-                <p>
-                  John's ability to understand our business needs and translate
-                  them into technical solutions is remarkable. The mobile app he
-                  built for us has been a game-changer.
-                </p>
-                <div class="d-flex align-items-center mt-4">
-                  <div
-                    class="rounded-circle bg-info d-flex align-items-center justify-content-center me-3"
-                    style="
-                      width: 50px;
-                      height: 50px;
-                      color: white;
-                      font-weight: bold;
-                    "
-                  >
-                    EC
+              <div class="card testimonial-hover shadow-sm text-dark">
+                <div class="card-body p-4 d-flex flex-column h-100">
+                  <div class="rating text-end mb-2 mt-2">
+                    <i class="fas fa-star text-warning"></i
+                    ><i class="fas fa-star text-warning"></i
+                    ><i class="fas fa-star text-warning"></i
+                    ><i class="fas fa-star-half-alt text-warning"></i
+                    ><i class="far fa-star text-warning"></i>
                   </div>
-                  <div>
-                    <h6 class="mb-0">Emily Chen</h6>
-                    <small class="text-muted"
-                      >Product Manager, InnovateCorp</small
-                    >
+                  <p class="testimonial-text mb-3">
+                    John’s ability to understand our business needs and
+                    translate them into technical solutions is remarkable. The
+                    mobile app he built for us has been a game-changer.
+                  </p>
+                  <div class="d-flex align-items-center mt-auto">
+                    <div class="avatar-circle bg-info me-3">EC</div>
+                    <div>
+                      <h6 class="mb-0">Emily Chen</h6>
+                      <small class="text-muted"
+                        >Product Manager, InnovateCorp</small
+                      >
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
+
+            <!-- CARD 4 -->
             <div class="swiper-slide">
-              <div class="testimonial-card p-4 shadow-sm bg-white rounded">
-                <p>
-                  John's ability to understand our business needs and translate
-                  them into technical solutions is remarkable. The mobile app he
-                  built for us has been a game-changer.
-                </p>
-                <div class="d-flex align-items-center mt-4">
-                  <div
-                    class="rounded-circle bg-info d-flex align-items-center justify-content-center me-3"
-                    style="
-                      width: 50px;
-                      height: 50px;
-                      color: white;
-                      font-weight: bold;
-                    "
-                  >
-                    EC
+              <div class="card testimonial-hover shadow-sm text-dark">
+                <div class="card-body p-4 d-flex flex-column h-100">
+                  <div class="rating text-end mb-2 mt-2">
+                    <i class="fas fa-star text-warning"></i
+                    ><i class="fas fa-star text-warning"></i
+                    ><i class="fas fa-star text-warning"></i
+                    ><i class="fas fa-star text-warning"></i
+                    ><i class="fas fa-star text-warning"></i>
                   </div>
-                  <div>
-                    <h6 class="mb-0">Emily Chen</h6>
-                    <small class="text-muted"
-                      >Product Manager, InnovateCorp</small
-                    >
+                  <p class="testimonial-text mb-3">
+                    We were impressed by John's dedication to quality and
+                    timelines. The web portal he built transformed our customer
+                    experience completely.
+                  </p>
+                  <div class="d-flex align-items-center mt-auto">
+                    <div class="avatar-circle bg-danger me-3">RK</div>
+                    <div>
+                      <h6 class="mb-0">Ravi Kumar</h6>
+                      <small class="text-muted">Founder, EcomTrend</small>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
+
+            <!-- CARD 5 -->
             <div class="swiper-slide">
-              <div class="testimonial-card p-4 shadow-sm bg-white rounded">
-                <p>
-                  John's ability to understand our business needs and translate
-                  them into technical solutions is remarkable. The mobile app he
-                  built for us has been a game-changer.
-                </p>
-                <div class="d-flex align-items-center mt-4">
-                  <div
-                    class="rounded-circle bg-info d-flex align-items-center justify-content-center me-3"
-                    style="
-                      width: 50px;
-                      height: 50px;
-                      color: white;
-                      font-weight: bold;
-                    "
-                  >
-                    EC
+              <div class="card testimonial-hover shadow-sm text-dark">
+                <div class="card-body p-4 d-flex flex-column h-100">
+                  <div class="rating text-end mb-2 mt-2">
+                    <i class="fas fa-star text-warning"></i
+                    ><i class="fas fa-star text-warning"></i
+                    ><i class="fas fa-star text-warning"></i
+                    ><i class="far fa-star text-warning"></i
+                    ><i class="far fa-star text-warning"></i>
                   </div>
-                  <div>
-                    <h6 class="mb-0">Emily Chen</h6>
-                    <small class="text-muted"
-                      >Product Manager, InnovateCorp</small
-                    >
+                  <p class="testimonial-text mb-3">
+                    Highly professional and responsive. John handled our entire
+                    redesign project smoothly and efficiently with minimal
+                    disruption.
+                  </p>
+                  <div class="d-flex align-items-center mt-auto">
+                    <div class="avatar-circle bg-warning me-3">AR</div>
+                    <div>
+                      <h6 class="mb-0">Alicia Roberts</h6>
+                      <small class="text-muted"
+                        >Creative Director, BrandWise</small
+                      >
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
+
+            <!-- CARD 6 -->
             <div class="swiper-slide">
-              <div class="testimonial-card p-4 shadow-sm bg-white rounded">
-                <p>
-                  John's ability to understand our business needs and translate
-                  them into technical solutions is remarkable. The mobile app he
-                  built for us has been a game-changer.
-                </p>
-                <div class="d-flex align-items-center mt-4">
-                  <div
-                    class="rounded-circle bg-info d-flex align-items-center justify-content-center me-3"
-                    style="
-                      width: 50px;
-                      height: 50px;
-                      color: white;
-                      font-weight: bold;
-                    "
-                  >
-                    EC
+              <div class="card testimonial-hover shadow-sm text-dark">
+                <div class="card-body p-4 d-flex flex-column h-100">
+                  <div class="rating text-end mb-2 mt-2">
+                    <i class="fas fa-star text-warning"></i
+                    ><i class="fas fa-star text-warning"></i
+                    ><i class="fas fa-star text-warning"></i
+                    ><i class="fas fa-star text-warning"></i
+                    ><i class="fas fa-star text-warning"></i>
                   </div>
-                  <div>
-                    <h6 class="mb-0">Emily Chen</h6>
-                    <small class="text-muted"
-                      >Product Manager, InnovateCorp</small
-                    >
+                  <p class="testimonial-text mb-3">
+                    John is an excellent collaborator. His expertise in
+                    full-stack development brought our SaaS product to life from
+                    MVP to scale.
+                  </p>
+                  <div class="d-flex align-items-center mt-auto">
+                    <div class="avatar-circle bg-secondary me-3">JS</div>
+                    <div>
+                      <h6 class="mb-0">James Stewart</h6>
+                      <small class="text-muted">Lead Developer, CloudX</small>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- CARD 7 -->
+            <div class="swiper-slide">
+              <div class="card testimonial-hover shadow-sm text-dark">
+                <div class="card-body p-4 d-flex flex-column h-100">
+                  <div class="rating text-end mb-2 mt-2">
+                    <i class="fas fa-star text-warning"></i
+                    ><i class="fas fa-star text-warning"></i
+                    ><i class="fas fa-star text-warning"></i
+                    ><i class="fas fa-star-half-alt text-warning"></i
+                    ><i class="far fa-star text-warning"></i>
+                  </div>
+                  <p class="testimonial-text mb-3">
+                    John’s insights and execution made our marketing automation
+                    tool robust and scalable. We saw results within weeks.
+                  </p>
+                  <div class="d-flex align-items-center mt-auto">
+                    <div class="avatar-circle bg-dark me-3">LP</div>
+                    <div>
+                      <h6 class="mb-0">Laura Patel</h6>
+                      <small class="text-muted">CMO, FunnelBoost</small>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- CARD 8 -->
+            <div class="swiper-slide">
+              <div class="card testimonial-hover shadow-sm text-dark">
+                <div class="card-body p-4 d-flex flex-column h-100">
+                  <div class="rating text-end mb-2 mt-2">
+                    <i class="fas fa-star text-warning"></i
+                    ><i class="fas fa-star text-warning"></i
+                    ><i class="fas fa-star text-warning"></i
+                    ><i class="fas fa-star text-warning"></i
+                    ><i class="far fa-star text-warning"></i>
+                  </div>
+                  <p class="testimonial-text mb-3">
+                    Fantastic experience! John’s frontend work brought our UX
+                    vision to life — users love the new interface and engagement
+                    has grown significantly.
+                  </p>
+                  <div class="d-flex align-items-center mt-auto">
+                    <div class="avatar-circle bg-info me-3">KK</div>
+                    <div>
+                      <h6 class="mb-0">Kunal Kapoor</h6>
+                      <small class="text-muted">UX Lead, AppStream</small>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
 
-          <!-- Navigation Buttons -->
+          <!-- Swiper Navigation -->
           <div class="swiper-button-next"></div>
           <div class="swiper-button-prev"></div>
-
-          <!-- Pagination -->
           <div class="swiper-pagination mt-4"></div>
         </div>
       </div>
