--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
           <div class="swiper-wrapper">
             <!-- CARD 1 -->
             <div class="swiper-slide">
-              <div class="card testimonial-hover shadow-sm text-dark">
+              <div class="card testimonial-hover testimonial-card shadow-sm text-dark">
                 <div class="card-body p-4 d-flex flex-column h-100">
                   <div class="rating text-end mb-2 mt-2">
                     <i class="fas fa-star text-warning"></i
@@ -373,7 +373,7 @@
                   <div class="d-flex align-items-center mt-auto">
                     <div class="avatar-circle bg-primary me-3">SM</div>
                     <div>
-                      <h6 class="mb-0">Sarah Mitchell</h6>
+                      <h6 class="mb-0">Sarah Mitchell 1111</h6>
                       <small class="text-muted">CEO, TechStart Inc.</small>
                     </div>
                   </div>
